--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install Toolchain
       run: rustup update stable && rustup default stable && rustup component add rustfmt
+    - name: Install protoc
+      run: sudo apt-get -y update && sudo apt-get -y install protobuf-compiler
     - name: Install cargo-llvm-cov
       uses: taiki-e/install-action@cargo-llvm-cov
     - name: Format check
