--- a/query_generation/Makefile
+++ b/query_generation/Makefile
@@ -3,13 +3,13 @@ SUBSTRAITC = compile_substrait.py
 
 TEST_DIRS = simple_tests
 SQLS = $(foreach dir, $(TEST_DIRS), $(wildcard $(dir)/*.sql))
-PROTOS = $(SQLS:.sql=.proto)
+PROTOS = $(SQLS:.sql=.obj)
 
 .PHONY = all clean
 
 all: $(PROTOS)
 
-%.proto: %.sql
+%.obj: %.sql
 	$(PYTHON) $(SUBSTRAITC) $^ $@
 
 clean:
