simple pipeline decomposer

--- a/query_generation/Makefile
+++ b/query_generation/Makefile
@@ -1,7 +1,7 @@
 PYTHON = python3
 SUBSTRAITC = compile_substrait.py 
 
-TEST_DIRS = simple_tests
+TEST_DIRS = simple_tests complex_graph
 SQLS = $(foreach dir, $(TEST_DIRS), $(wildcard $(dir)/*.sql))
 PROTOS = $(SQLS:.sql=.obj)
 
