--- a/datafusion-integration/Cargo.toml
+++ b/datafusion-integration/Cargo.toml
@@ -10,3 +10,4 @@ arrow = { version = "50.0.0"}
 datafusion = { version = "35.0.0"}
 datafusion-proto = { version = "35.0.0"}
 tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
+vayu = { path = "../vayu", version = "0.1.0"}
