--- a/vayu/Cargo.toml
+++ b/vayu/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 arrow = { version = "50.0.0"}
 datafusion = { version = "35.0.0"}
 tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
+futures = { version = "0.3.28" }
 
