--- a/vayu/Cargo.toml
+++ b/vayu/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 arrow = { version = "50.0.0"}
-datafusion = { version = "35.0.0"}
+datafusion = { version = "35.0.0",path = "../../arrow-datafusion/datafusion/core"}
+
 tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
 futures = { version = "0.3.28" }
 
