--- a/datafusion-integration/Cargo.toml
+++ b/datafusion-integration/Cargo.toml
@@ -11,3 +11,6 @@ tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
 vayu = { path = "../vayu", version = "0.1.0"}
 datafusion = { version = "36.0.0", path = "../arrow-datafusion/datafusion/core"}
 datafusion-proto = { version = "36.0.0", path = "../arrow-datafusion/datafusion/proto"}
+ahash = { version = "0.8", default-features = false, features = [
+    "runtime-rng",
+] }
