--- a/vayu/Cargo.toml
+++ b/vayu/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
 futures = { version = "0.3.28" }
 datafusion = { version = "36.0.0", path = "../arrow-datafusion/datafusion/core"}
 datafusion-proto = { version = "36.0.0", path = "../arrow-datafusion/datafusion/proto"}
+ahash = "0.8.11"
