--- a/vayu/Cargo.toml
+++ b/vayu/Cargo.toml
@@ -12,3 +12,7 @@ futures = { version = "0.3.28" }
 datafusion = { version = "36.0.0", path = "../arrow-datafusion/datafusion/core"}
 vayu-common = { version = "0.1.0", path = "../vayu-common"}
 ahash = "0.8.11"
+crossbeam-skiplist = "0.1.3"
+crossbeam-utils = "0.8.19"
+leapfrog =  {version = "0.3.0", features = ["stable_alloc"]}
+
