--- a/vayuDB/Cargo.toml
+++ b/vayuDB/Cargo.toml
@@ -12,3 +12,7 @@ vayu-common = { version = "0.1.0", path = "../vayu-common"}
 futures = { version = "0.3.28" }
 heapless = "0.8.0"
 crossbeam-channel = "0.5"
+crossbeam-skiplist = "0.1.3"
+crossbeam-utils = "0.8.19"
+leapfrog =  {version = "0.3.0", features = ["stable_alloc"]}
+lockfree = "0.5.1"
