--- a/vayuDB/Cargo.toml
+++ b/vayuDB/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 vayu = { version = "0.1.0", path = "../vayu"}
 datafusion = { version = "36.0.0", path = "../arrow-datafusion/datafusion/core"}
+datafusion-benchmarks = { version = "36.0.0", path = "../arrow-datafusion/benchmarks"}
 vayu-common = { version = "0.1.0", path = "../vayu-common"}
 futures = { version = "0.3.28" }
 heapless = "0.8.0"
@@ -16,3 +17,4 @@ crossbeam-skiplist = "0.1.3"
 crossbeam-utils = "0.8.19"
 leapfrog =  {version = "0.3.0", features = ["stable_alloc"]}
 lockfree = "0.5.1"
+
