--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ prost-types = "0.12"
 protoc-rust = "2.28.0"
 datafusion = "36.0.0"
 csv = "1.3.0"
+tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
