--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ protoc-rust = "2.28.0"
 datafusion = "36.0.0"
 csv = "1.3.0"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
+ahash = "0.8.11"
