--- a/docs/15721-project-ee2.json
+++ b/docs/15721-project-ee2.json
@@ -14,7 +14,7 @@
             },
             {
                 "name": "Yash Kothari",
-                "url": "https://CHANGE_ME"
+                "url": "https://yashkothari42.github.io"
             }
         ]
     }
